- ParallelRows: use correct lhs_inf/rhs_inf with negative scale factor under certain circumstances
- SimpleProbing: avoid unstable replacements of columns with small ranges

Miscellaneous
-------------
- VeriPB: prints VeriPB parseable verification certificate for pseudoboolean problem in the log (experimental)
- OPB-Format: PaPILO can now parse files in linear opb format
- RoundingSat https://gitlab.com/MIAOresearch/software/roundingsat is available as PseudoBoolean solver (experimental)
- Ortools: PaPILO parses the dual solution and the reduced costs from ortools
- HiGHS: PaPILO supports HiGHS version 1.3+
- OPB-Format: PaPILO can now parse files in linear opb format
- if PaPILO solve the problem a backend solver is no longer called

@section RN212 PaPILO 2.1.3
***************************

- Boost: minimal 1.81 requirement for Mac since compiler complained about deprecated declarations in Boost

@section RN212 PaPILO 2.1.2
***************************

Fixed bugs
----------

- SimpleSubstitution: fixing bug in the infeasibility detection of the extended euclidean

@section RN211 PaPILO 2.1.1
***************************

Fixed bugs
----------
- SimpleSubstitution: avoid abort because of calling extended_euclidean with negative coefficients


@section RN210 PaPILO 2.1.0
***************************

Performance improvements
------------------------

- ParallelCol: reducing the amount of redundant transactions in case of multiple parallel integer columns
- Probing: checks the time limit condition before propagating a variable
- Probing: introduce new parameter to cap the badgesize
- SequentialMode: execute functions like trivialPresolve only once per round and not after every presolver

Interface changes
-----------------

- Wrapper in Julia for PaPILO: https://github.com/scipopt/PaPILO.jl
- ProblemBuilder - setColImplInt(int,boolean): (un)sets the Flag Implied Integer for a variable

### New parameters with default values
