@@ -29,11 +29,12 @@ Miscellaneous
 -------------
 - VeriPB: prints VeriPB parseable verification certificate for pseudoboolean problem in the log (experimental)
 - OPB-Format: PaPILO can now parse files in linear opb format
-- RoundingSat https://gitlab.com/MIAOresearch/software/roundingsat is available as PseudoBoolean solver (experimental)
+- OPB-Format: PaPILO can now write files in linear opb format
+- RoundingSat https://gitlab.com/MIAOresearch/software/roundingsat is available as PseudoBoolean solver
 - Ortools: PaPILO parses the dual solution and the reduced costs from ortools
 - HiGHS: PaPILO supports HiGHS version 1.3+
-- OPB-Format: PaPILO can now parse files in linear opb format
 - if PaPILO solve the problem a backend solver is no longer called
+- make testcluster script extended by SKIP_PRESOLVE and SOLVE_EXECUTABLE to solve the reduced/original problem
 
 @section RN212 PaPILO 2.1.3
 ***************************
